--- a/adminpage.html
+++ b/adminpage.html
@@ -8,12 +8,20 @@
     <body>
         <div class="container mt-3">
     <h3 class="mt-5 mb-3">신규 등록 상품</h3>
-    <form class="row row-cols-lg-auto g-3 align-items-center">      
+    <form class="row row-cols-lg-auto g-3 align-items-center">
         <div class="col-12">
         <label class="visually-hidden" for="inlineFormSelectPref">Preference</label>
+        <select class="form-select" id="mfselect" name = "category_data_table_mf">
+            <option>공용</option>
+            <option>남성</option>
+            <option>여성</option>
+        </select>
         <select class="form-select" id="inlineFormSelectPref" name="category_data_table">
-            <!-- 셀렉트요소의 name="category_data_table"은 지우거나 변경하면 안돼요 -->
-            <!-- 카테고리 셀렉트 코드를 넣어주세요 -->
+            <option value="">ALL</option>
+            <option>상의</option>
+            <option>하의</option>
+            <option>신발</option>
+            <option>패션잡화</option>
         </select>
         </div>
         <div class="col-3">
@@ -27,7 +35,13 @@
     <div class="container mt-3">
         <table class="table table-sm">
         <thead>
-            <!-- 열의 속성값을 나타내는 코드를 작성해주세요 (예 : 카테고리, 브랜드, 상품명, 가격) -->
+            <tr>
+                <th scope="col" style="width: 8%;">성별</th>
+                <th scope="col" style="width: 15%;">카테고리</th>
+                <th scope="col" style="width: 25%;">브랜드</th>
+                <th scope="col" style="width: 40%;">상품명</th>
+                <th scope="col" style="width: 20%;">가격</th>
+            </tr>
         </thead>
         <tbody id="product_data_Table">
             <!-- tbody요소의 id="product_data_Table" 는 지우거나 변경하면 안돼요! -->
@@ -41,11 +55,10 @@
     <script>
     // 제품 데이터
     const product_data = [
-        { category: "상의", brand: 'Supreme', product: '슈프림 박스로고 후드티', price: '390,000' },
-        { category: "하의", brand: 'DIESEL', product: '디젤 트랙 팬츠', price: '188,000' },
-        { category: "신발", brand: 'Nike', product: '에어포스 1', price: '137,000' },
-        { category: "패션잡화", brand: 'Music&Goods', product: '빵빵이 키링', price: '29,000' },
-      // ...
+        { boyorgirl: "공용", category: "상의", brand: 'Supreme', product: '슈프림 박스로고 후드티', price: '390,000' },
+        { boyorgirl: "남성", category: "하의", brand: 'DIESEL', product: '디젤 트랙 팬츠', price: '188,000' },
+        { boyorgirl: "공용", category: "신발", brand: 'Nike', product: '에어포스 1', price: '137,000' },
+        { boyorgirl: "공용", category: "패션잡화", brand: 'Music&Goods', product: '빵빵이 키링', price: '29,000' },
     ];
 
     // 제품 테이블에 데이터 추가
@@ -54,10 +67,11 @@
     // 초기 데이터 로딩
     product_data.forEach((item) => {
         const row = product_data_Table.insertRow();
-        row.insertCell(0).innerHTML = item.category;
-        row.insertCell(1).innerHTML = item.brand;
-        row.insertCell(2).innerHTML = item.product;
-        row.insertCell(3).innerHTML = item.price;
+        row.insertCell(0).innerHTML = item.boyorgirl;
+        row.insertCell(1).innerHTML = item.category;
+        row.insertCell(2).innerHTML = item.brand;
+        row.insertCell(3).innerHTML = item.product;
+        row.insertCell(4).innerHTML = item.price;
     });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
