--- a/adminpage.html
+++ b/adminpage.html
@@ -25,13 +25,17 @@
         </select>
         </div>
         <div class="col-3">
-        <!-- input 입력창 코드를 넣어주세요 -->
+        <!-- input 입력창 코드 -->
+            <label class = "visually-hidden" for = "productSearch">제품명</label>
+            <input type = "text" class = "form-control" id="productSearch" placeholder = "검색하고 싶은 내용">
         </div>
-        <div class="col-auto">
         <!-- 조회 버튼 코드를 넣어주세요 -->
+        <div class="col-auto">
+            <button type = "button" id = "btn_search_view" float = right onclick="searchProducts()">조회</button>
         </div>
     </form>
 
+<!-- 컨테이너 테이블: 성별 추가 -->
     <div class="container mt-3">
         <table class="table table-sm">
         <thead>
@@ -44,12 +48,17 @@
             </tr>
         </thead>
         <tbody id="product_data_Table">
-            <!-- tbody요소의 id="product_data_Table" 는 지우거나 변경하면 안돼요! -->
-            <!-- 제품 데이터가 여기 추가됩니다. -->
+            <!-- 제품 데이터 여기서 추가됨 -->
         </tbody>
         </table>
-    </div>
-    <!-- 페이지 네이션 코드를 넣어주세요 -->
+        <div id = "noDataMessage" class = "no-data" style = "display: none;">
+            검색 결과가 없습니다.
+        </div>
+    <!-- 페이지 네비게이션 -->
+        <nav aria-label="Page navigation" class = "mt-4">
+            <ul id = "pagination">
+            </ul>
+        </nav>
     </div>
 
     <script>
@@ -59,7 +68,30 @@
         { boyorgirl: "남성", category: "하의", brand: 'DIESEL', product: '디젤 트랙 팬츠', price: '188,000' },
         { boyorgirl: "공용", category: "신발", brand: 'Nike', product: '에어포스 1', price: '137,000' },
         { boyorgirl: "공용", category: "패션잡화", brand: 'Music&Goods', product: '빵빵이 키링', price: '29,000' },
+        { boyorgirl: "공용", category: "상의", brand: 'Stussy', product: '스투시 베이직 로고 후드', price: '168,000' },
+        { boyorgirl: "여성", category: "상의", brand: 'Thrasher', product: '트래셔 플레임 로고 티셔츠', price: '59,000' },
+        { boyorgirl: "여성", category: "하의", brand: 'Carhartt', product: '칼하트 워크 팬츠', price: '128,000' },
+        { boyorgirl: "여성", category: "하의", brand: 'Dickies', product: '디키즈 874 워크 팬츠', price: '79,000' },
+        { boyorgirl: "공용", category: "신발", brand: 'Adidas', product: '슈퍼스타', price: '119,000' },
+        { boyorgirl: "공용", category: "신발", brand: 'Converse', product: '척 테일러 올스타', price: '79,000' },
+        { boyorgirl: "공용", category: "신발", brand: 'Vans', product: '올드스쿨', price: '89,000' },
+        { boyorgirl: "공용", category: "패션잡화", brand: 'New Era', product: 'NY 양키스 캡', price: '45,000' },
+        { boyorgirl: "공용", category: "패션잡화", brand: 'Kangol', product: '캉골 버킷햇', price: '69,000' },
+        { boyorgirl: "남성", category: "상의", brand: 'Palace', product: '팔라스 트라이퍼그 후드', price: '248,000' },
+        { boyorgirl: "남성", category: "하의", brand: 'Stone Island', product: '스톤아일랜드 카고 팬츠', price: '458,000' },
+        { boyorgirl: "공용", category: "신발", brand: 'Jordan', product: '조던 1 레트로 하이', price: '219,000' },
+        { boyorgirl: "여성", category: "패션잡화", brand: 'Acne Studios', product: '아크네 스튜디오 머플러', price: '320,000' },
+        { boyorgirl: "여성", category: "상의", brand: 'Off-White', product: '오프화이트 애로우 티셔츠', price: '425,000' },
+        { boyorgirl: "남성", category: "하의", brand: 'Fear of God', product: '에센셜 스웻팬츠', price: '185,000' },
+        { boyorgirl: "남성", category: "신발", brand: 'Balenciaga', product: '트리플S 스니커즈 남성', price: '1,190,000' },
+        { boyorgirl: "여성", category: "신발", brand: 'Balenciaga', product: '트리플S 스니커즈 여성', price: '1,190,000' }
+
     ];
+
+    // 페이지당 표시할 항목 수
+    const itemsPerPage = 5;
+    let currentPage = 1;
+    let filteredData = [...product_data];
 
     // 제품 테이블에 데이터 추가
     const product_data_Table = document.getElementById('product_data_Table');
@@ -73,6 +105,12 @@
         row.insertCell(3).innerHTML = item.product;
         row.insertCell(4).innerHTML = item.price;
     });
+
+    // 제품 검색 함수
+    function searchProducts(){
+        const categorySelect = document.getElementById('inlineFormSelectPref');
+        const searchInput = document.getElementById('productSearch');
+    }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     </body>
